修正部分错误

--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="row">
-        <div class="col-2 border">1</div>
-        <div class="col-2 border">2</div>
-        <div class="col-2 border">3</div>
-        <div class="col-2 border">4</div>
-        <div class="col-2 border">5</div>
-        <div class="col-2 border">6</div>
-        <i class="icon">&#xe6ad;</i>
-    </div>
-    <script>
-        function setHtmlFontSize(){
-            var html_width = document.documentElement.clientWidth;
-            var html = document.querySelector("html");
-            html.style.fontSize = html_width/30+"px";
-        }
-        setHtmlFontSize();
-        window.addEventListener("resize",setHtmlFontSize);
-    </script>
+    <div class="abc"></div>
 </body>
 </html>
